[package]
name = "gluqlo-rs"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"


[dependencies.sdl2]
version = "0.32.2"
features = ["bundled"]