[package]
name = "gluqlo-rs"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
time = "0.1.44"

[dependencies.sdl2]
version = "0.34.3"
features = ["ttf", "gfx"]